# python-audio-converter

./: .gitignore  README.md  diagnose_artwork.py  main.py  pyproject.toml
app/: README.md
app/gui/: __init__.py  main.py
docs/: Design.md  SRS.md  Tasks.md  migration_notes.md  plan.md  tasks.md  troubleshooting.md  user_guide.md
docs/deprecated/: Code_Analysis_Report.md  Design.md  SRS.md
openspec/: project.md
openspec/changes/add-auto-library-scan/: proposal.md  tasks.md
openspec/changes/add-auto-preflight/: proposal.md  tasks.md
openspec/changes/add-dual-library-browser/: proposal.md  tasks.md
openspec/changes/add-flac-recompress/: proposal.md  tasks.md
openspec/changes/add-gui-path-input/: tasks.md
openspec/changes/add-lazy-wine-probe/: tasks.md
openspec/changes/add-library-browser/: proposal.md  tasks.md
openspec/changes/add-library-gui/: proposal.md  tasks.md
openspec/changes/add-side-by-side-browser/: design.md  proposal.md  tasks.md
openspec/changes/fix-artwork-extraction/: proposal.md  tasks.md
output_dir/: pac-run-summary-1756312783.json  pac-run-summary-1756312821.json  pac-run-summary-1756312848.json  pac-run-summary-1756312965.json
output_dir/sub_dir/: test.opus
src/pac/: __init__.py  auth_tools.py  config.py  convert_dir.py  db.py  dest_index.py  encoder.py  ffmpeg_check.py  flac_tools.py  library_analyzer.py  library_planner.py  library_runner.py  logging.py  metadata.py  paths.py  planner.py  scanner.py  scheduler.py
tests/: README.md  test_library.py  test_logging.py  test_paths.py
(+36 files in other folders)
