[project]
name = "python-audio-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mutagen>=1.47.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.1",
    "pyside6>=6.9.1",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "tomlkit>=0.13.2",
]

[project.scripts]
pac-gui = "app.gui.main:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
